<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/textView"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fraces celebres" />
    <TextView

        android:text="@string/Frace_jhon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>
    <TextView
        android:text="@string/Nombre_jhon"
        android:layout_width="wrap_content"
        android:id="@+id/txt_jhon"
        android:textSize="14sp"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"/>
    <TextView

        android:text="@string/Frace_victor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>
    <TextView
        android:text="@string/nombre_victor"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:id="@+id/txt_victor"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"/>
    <TextView

        android:text="@string/Frace_daniel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>
    <TextView
        android:text="@string/Nombre_daniel"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:id="@+id/txt_daniel"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_marginTop="40dp"
        android:id="@+id/pudge"
        android:layout_gravity="center"
        android:layout_width="197dp"
        android:layout_height="115dp"
        android:src="@drawable/pudge"/>

</LinearLayout>